--- a/.github/workflows/check-multi-platform.yml
+++ b/.github/workflows/check-multi-platform.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: build
-        ./debian.sh
+      - run:  ./debian.sh
 
   publish:
     needs: [build]
@@ -20,5 +20,5 @@ jobs:
     environment: production
     steps:
       - name: publish
-        ./startup.sh
+      - run: ./startup.sh
 
